--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Jiangwei Dai</h1>
+							<p>Trader</p>
 						</div>
 
 					<!-- Nav -->
@@ -73,7 +73,7 @@
 						</div>
 					</section>
 
-				<!-- Portfolio -->
+				<!-- Derivatives 101 -->
 					<section id="portfolio" class="two">
 						<div class="container">
 
@@ -134,7 +134,7 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
+				<!-- Market Watch -->
 					<section id="about" class="three">
 						<div class="container">
 
