--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 					</section>
 
 				<!-- Derivatives 101 -->
-					<section id="portfolio" class="two">
+					<section id="Derivatives 101" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Derivatives 101</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
@@ -135,7 +135,7 @@
 					</section>
 
 				<!-- Market Watch -->
-					<section id="about" class="three">
+					<section id="Market Watch" class="three">
 						<div class="container">
 
 							<header>
