--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#Derivatives 101" id="Derivatives 101-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#Market Watch" id="Market Watch-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#Derivatives 101" id="Derivatives 101-link"><span class="icon solid fa-th">Derivatives 101</span></a></li>
+								<li><a href="#Market Watch" id="Market Watch-link"><span class="icon solid fa-user">Market Watch</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -139,7 +139,7 @@
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Market Watch</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
